envoy-sds.yaml
node:
  id: test
  cluster: test
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          forward_client_cert_details: SANITIZE_SET
          set_current_client_cert_details:
            subject: true
            # cert: true
            # dns: true
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  # host_rewrite_literal: www.envoyproxy.io
                  # prefix_rewrite: /hello
                  cluster: service_envoyproxy_io
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true  
          common_tls_context:
            tls_certificate_sds_secret_configs:
              sds_config:
                path: ./sds/server_crt_sds.yaml
            validation_context_sds_secret_config:
              sds_config:
                path: ./sds/validation_ctx_sds.yaml

  - name: listener_1
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  # host_rewrite_literal: www.envoyproxy.io
                  # prefix_rewrite: /hello
                  cluster: service_envoyproxy_io_1
      # transport_socket:
      #   name: envoy.transport_sockets.tls
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      #     require_client_certificate: true  
      #     common_tls_context:
      #       validation_context:
      #         trusted_ca:
      #           filename: ./ca.crt
      #       tls_certificates:
      #         certificate_chain:
      #           filename: ./server.crt
      #         private_key:
      #           filename: ./server.key

  clusters:
  - name: service_envoyproxy_io
    # hosts:
    # - socket_address:
    #   address: 0.0.0.0
    #   port_value: 8080
    connect_timeout: 30s
    # type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 8080
    # transport_socket:
    #   name: envoy.transport_sockets.tls
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    #     common_tls_context:
    #       validation_context:
    #         trusted_ca:
    #           filename: ./ca.crt
  - name: service_envoyproxy_io_1
    # hosts:
    # - socket_address:
    #   address: 0.0.0.0
    #   port_value: 8080
    connect_timeout: 30s
    # type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 10000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
            sds_config:
              path: ./sds/client_crt_sds.yaml
          validation_context_sds_secret_config:
            sds_config:
              path: ./sds/validation_ctx_sds.yaml
